# openjp2k

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE
docs/grok-cleanroom-research/: README.md  grok-conformance-and-benchmarks.md  grok-encoder-deep-dive.md  grok-performance-innovations.md  grok-public-api.md
docs/superpowers/plans/: 2026-05-16-t1-d6-scaffolding-and-presize.md  2026-05-19-d1-mq-tightening.md  2026-05-22-d6-1-tcd-buffer-pool.md  2026-05-23-sp3-1-avx2-97-lift.md  2026-05-24-sp3-2-int16-53-dwt.md  2026-05-24-sp3-2b-int16-partial-dwt.md  2026-05-25-d7-1-t1-precision-gate.md  2026-05-25-d7-t1-conditional-dispatch.md  2026-05-26-sp2-1a-task-graph-infrastructure.md  2026-05-27-d8-dc-level-shift-avx2.md  2026-05-29-sp3-5-int16-97-dwt.md
docs/superpowers/profile/: 2026-05-21-post-d1-decode-profile.md
docs/superpowers/specs/: 2026-05-16-decode-perf-design.md  2026-05-21-d2-post-d1-profile-design.md  2026-05-21-d3-zc-fusion-design.md  2026-05-22-d6-1-tcd-buffer-pool-design.md  2026-05-23-sp3-1-avx2-97-lift-design.md  2026-05-24-sp3-2-int16-53-dwt-design.md  2026-05-24-sp3-2b-int16-partial-dwt-design.md  2026-05-25-d7-1-t1-precision-gate-design.md  2026-05-25-d7-t1-conditional-dispatch-design.md  2026-05-26-sp2-0-mt-baseline-outcome.md  2026-05-26-sp2-1-dag-scheduling-design.md  2026-05-27-d8-dc-level-shift-avx2-design.md  2026-05-29-sp3-5-int16-97-dwt-design.md
scripts/: run-conformance.sh  run_diff_test.sh
src/lib/openjp2/: CMakeLists.txt  dwt.c  j2k.c  mqc.c  mqc.h  mqc_fast.c  mqc_fast.h  openjpeg.h  t1.c  t1.h  t1_fast.c  t1_fast.h  t1_inl.h  task_graph.cpp  task_graph.h  tcd.c  tcd.h
tests/unit/: CMakeLists.txt  test_mqc_diff.c  test_mqc_dump.c  test_mqc_packed_equivalence.c
tools/ctest_scripts/: travis-ci.cmake
